--- a/Application_Clean/Application_Clean.vcxproj
+++ b/Application_Clean/Application_Clean.vcxproj
@@ -145,6 +145,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\Cube\Cube.h" />
+    <ClCompile Include="src\Cube\Cube.cpp" />
     <ClCompile Include="src\Light\DirectionalLight.cpp" />
     <ClCompile Include="src\EntryPoint.cpp" />
     <ClCompile Include="src\FPSCamera.cpp" />
