--- a/Application_Clean/Application_Clean.vcxproj.filters
+++ b/Application_Clean/Application_Clean.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="src\Light\DirectionalLight.cpp">
       <Filter>Source Files\Light</Filter>
     </ClCompile>
+    <ClCompile Include="include\Cube\Cube.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Cube\Cube.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\WindowManager.h">
