--- a/Application_Clean/Application_Clean.vcxproj.filters
+++ b/Application_Clean/Application_Clean.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Source Files\Cube">
       <UniqueIdentifier>{2e160c1e-0fea-4283-8961-5d0be162de9d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\PointLight">
+      <UniqueIdentifier>{0d4558b4-98ce-4a69-a05e-a5fa2764e15e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\PointLight">
+      <UniqueIdentifier>{4aac1312-c6a8-4455-855e-1e867c9de1e4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\EntryPoint.cpp">
@@ -56,6 +62,9 @@
     </ClCompile>
     <ClCompile Include="src\Cube\Cube.cpp">
       <Filter>Source Files\Cube</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Cube\PointLight\PointLight.cpp">
+      <Filter>Source Files\PointLight</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="include\Light\DirectionalLight.h">
       <Filter>Header Files\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PointLight\PointLight.h">
+      <Filter>Header Files\PointLight</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
