--- a/Application_Clean/Application_Clean.vcxproj
+++ b/Application_Clean/Application_Clean.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="include\Cube\Cube.h" />
     <ClCompile Include="src\Cube\PointLight\PointLight.cpp" />
     <ClCompile Include="src\Cube\Cube.cpp" />
+    <ClCompile Include="src\Cube\PointLight\Texture\stb_image.cpp" />
     <ClCompile Include="src\Light\DirectionalLight.cpp" />
     <ClCompile Include="src\EntryPoint.cpp" />
     <ClCompile Include="src\FPSCamera.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="include\Properties.h" />
     <ClInclude Include="include\Scene.h" />
     <ClInclude Include="include\Shader.h" />
+    <ClInclude Include="include\Texture\stb_image.h" />
     <ClInclude Include="include\WindowManager.h" />
     <ClInclude Include="include\Light\Light.h" />
     <ClInclude Include="include\PointLight\PointLight.h" />
